--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".piano.piano"></activity>
+        <activity android:name=".user.LoginActivity"></activity>
+        <activity android:name=".piano.piano" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Open">
             <intent-filter>
