--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT"
         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowAudioPlaybackCapture="true"
@@ -19,11 +20,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_config">
         <activity android:name=".user.LoginActivity"></activity>
         <activity android:name=".fragement.SongList.SongListActivity" />
         <activity android:name=".piano.piano" />
         <activity android:name=".piano.ListActivity" />
+        <activity android:name=".piano.PlaySongActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Open">
             <intent-filter>
@@ -32,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
